--- a/src/views/home.css
+++ b/src/views/home.css
@@ -15,3 +15,11 @@
   align-items: flex-start;
   flex-direction: column;
 }
+.home-container2 {
+  flex: 0 0 auto;
+  width: 418px;
+  height: 365px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
