--- a/src/views/home.css
+++ b/src/views/home.css
@@ -23,3 +23,12 @@
   align-items: flex-start;
   flex-direction: column;
 }
+.home-container3 {
+  flex: 0 0 auto;
+  width: 200px;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
